# i1i2i3_phone

./: CMakeLists.txt  README.md
client/: main.cpp  read_line.hpp  sound.hpp  tcp_message.hpp  udp_multicast.hpp
common/: message.hpp
common/protocol/: config.hpp
common/util/: id_registrator.hpp
server/: chat_room.hpp  client.hpp  client_agent.cpp  client_agent.hpp  gateway.hpp  main.cpp  query.hpp  talk_room.hpp  voice.hpp  voice_chat.hpp
test/: boost_asio.cpp  cereal_test.cpp  easy_phone.cpp  multi_recv_c.cpp  multicast_recv.cpp  multicast_send.cpp  multicast_test.cpp  tcp_receiver.cpp  tcp_sender.cpp  udp_client.cpp  udp_server.cpp
